--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,9 @@
                         <a class="nav-link" href="{% url 'blog' %}">Blog</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'newsletter' %}">Newsletter</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
                     <!-- <li class="nav-item">
@@ -86,7 +89,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Kennedy Akogo</h5>
-                    <p>AI/LLM Engineer passionate about building intelligent systems,</p>
+                    <p>AI/LLM Engineer</p>
                 </div>
                 <div class="col-md-6">
                     <h5>Connect</h5>
