--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="col-lg-6 fade-in-right">
-                <img src="{% static 'portfolio/img/images1.png' %}" alt="Profile" class="img-fluid rounded-circle shadow floating" style="max-width: 400px;">
+                <img src="{% static 'portfolio/img/images.png' %}" alt="Profile" class="img-fluid rounded-circle shadow floating" style="max-width: 400px;">
             </div>
         </div>
     </div>
