--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-lg-8 mx-auto text-center mb-5">
             <h1 class="display-4 mb-3">Blog</h1>
-            <p class="lead">Thoughts, tutorials, and insights about web development and technology.</p>
+            <p class="lead">1share what I’m learning about ML and LLMs, along with insights, project ideas, and experiments. This space is part journal, part knowledge base .</p>
         </div>
     </div>
     
