--- a/templates/base.html
+++ b/templates/base.html
@@ -54,11 +54,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <button class="btn btn-outline-secondary btn-sm ms-2" id="theme-toggle">
-                            <i class="bi bi-sun" id="theme-icon"></i>
-                        </button>
-                    </li> -->
                 </ul>
             </div>
         </div>
@@ -91,15 +86,14 @@
                 <div class="col-md-6">
                     <h5>Connect</h5>
                     <div class="d-flex gap-3">
-                        <a href="https://github.com/kennedy-ak" class="text-light"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/kennedy-akogo-348429227/" class="text-light"><i class="bi bi-linkedin"></i></a>
-              
+                        <a href="https://github.com/kennedy-ak" class="text-light"><i class="bi bi-github fs-4"></i></a>
+                        <a href="https://www.linkedin.com/in/kennedy-akogo-348429227/" class="text-light"><i class="bi bi-linkedin fs-4"></i></a>
                     </div>
                 </div>
             </div>
             <hr>
             <div class="text-center">
-                <p>&copy; 2024 Kennedy Akogo. All rights reserved.</p>
+                <p>&copy; 2025 Kennedy Akogo. All rights reserved.</p>
             </div>
         </div>
     </footer>
