--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -78,14 +78,32 @@
                     </div>
                 </div>
             </div>
+<!-- Blog Writing & Content Creation -->
+<div class="col-md-3 mb-4 stagger-item">
+    <div class="card text-center h-100">
+        <div class="card-body">
+            <i class="bi bi-pen display-4 text-primary mb-3"></i>
+            <h5>Blog Writing & Content</h5>
+            <p>Technical Writing, AI/ML Tutorials, Documentation</p>
+        </div>
+    </div>
+</div>
 
-<<<<<<< HEAD
               <div class="col-md-3 mb-4">
                 <div class="card text-center h-100">
                     <div class="card-body">
                         <i class="bi bi-cloud display-4 text-primary mb-3 "></i>
                         <h5>DevOps</h5>
                         <p>Docker, AWS, Git, CI/CD</p>
+                    </div>
+                </div>
+            </div>
+                        <div class="col-md-3 mb-4 stagger-item">
+                <div class="card text-center h-100">
+                    <div class="card-body">
+                        <i class="bi bi-cloud display-4 text-primary mb-3 floating"></i>
+                        <h5>Cloud & MLOps</h5>
+                        <p>AWS, Azure, Docker, MLflow, Kubernetes</p>
                     </div>
                 </div>
             </div>
